--- a/MergeDragons/settings/project.json
+++ b/MergeDragons/settings/project.json
@@ -21,7 +21,7 @@
   "excluded-modules": [
     "3D Physics/Builtin"
   ],
-  "last-module-event-record-time": 0,
+  "last-module-event-record-time": 1715137071532,
   "design-resolution-width": 960,
   "design-resolution-height": 640,
   "fit-width": false,
@@ -44,5 +44,6 @@
       "enable": false
     }
   },
-  "migrate-history": []
+  "migrate-history": [],
+  "start-scene": "current"
 }
