--- a/MahjongSolitaire/assets/resources/json/levelConfig.json
+++ b/MahjongSolitaire/assets/resources/json/levelConfig.json
@@ -1,6 +1,6 @@
 [
   {
-    "maxLevel": 3,
+    "tiers": 3,
     "map": [
       [
         0,
@@ -19,105 +19,47 @@
       ],
       [
         0,
-        [
-          29
-        ],
+        "37",
         0,
-        [
-          37
-        ],
+        "37",
         0,
-        [
-          16
-        ],
+        "16",
         0,
-        [
-          34
-        ],
+        "34",
         0,
-        [
-          35
-        ],
+        "35",
         0,
-        [
-          4
-        ],
+        "4",
         0
       ],
       [
         0,
-        [
-          0,
-          16
-        ],
-        [
-          0,
-          0,
-          102
-        ],
-        [
-          0,
-          17
-        ],
-        [
-          0,
-          0,
-          3
-        ],
-        [
-          0,
-          8
-        ],
+        "0_34",
+        "0_0_3",
+        "0_17",
+        "0_0_3",
+        "0_8",
         0,
-        [
-          0,
-          28
-        ],
-        [
-          0,
-          0,
-          17
-        ],
-        [
-          0,
-          11
-        ],
-        [
-          0,
-          0,
-          1
-        ],
-        [
-          0,
-          16
-        ],
+        "0_28",
+        "0_0_17",
+        "0_11",
+        "0_0_1",
+        "0_16",
         0
       ],
       [
         0,
-        [
-          12
-        ],
+        "36",
         0,
-        [
-          36
-        ],
+        "36",
         0,
-        [
-          25
-        ],
+        "25",
         0,
-        [
-          14
-        ],
+        "14",
         0,
-        [
-          25
-        ],
+        "25",
         0,
-        [
-          13
-        ],
+        "31",
         0
       ],
       [
@@ -126,15 +68,9 @@
         0,
         0,
         0,
-        [
-          0,
-          12
-        ],
+        "0_12",
         0,
-        [
-          0,
-          2
-        ],
+        "0_2",
         0,
         0,
         0,
@@ -143,101 +79,47 @@
       ],
       [
         0,
-        [
-          34
-        ],
-        [
-          0,
-          101
-        ],
-        [
-          34
-        ],
+        "35",
+        "0_101",
+        "35",
         0,
-        [
-          31,
-          0,
-          104
-        ],
+        "31_0_104",
         0,
-        [
-          22,
-          0,
-          13
-        ],
+        "22_0_13",
         0,
-        [
-          14
-        ],
-        [
-          0,
-          101
-        ],
-        [
-          108
-        ],
+        "14",
+        "0_101",
+        "22",
         0
       ],
       [
         0,
         0,
-        [
-          0,
-          0,
-          25
-        ],
+        "0_0_25",
         0,
         0,
-        [
-          0,
-          12
-        ],
+        "0_12",
         0,
-        [
-          0,
-          2
-        ],
+        "0_2",
         0,
         0,
-        [
-          0,
-          0,
-          13
-        ],
+        "0_0_13",
         0,
         0
       ],
       [
         0,
-        [
-          36
-        ],
-        [
-          0,
-          102
-        ],
-        [
-          25
-        ],
+        "36",
+        "0_102",
+        "25",
         0,
-        [
-          8
-        ],
+        "8",
         0,
-        [
-          9
-        ],
+        "9",
         0,
-        [
-          9
-        ],
-        [
-          0,
-          102
-        ],
-        [
-          25
-        ],
+        "9",
+        "0_102",
+        "25",
         0
       ],
       [
@@ -245,17 +127,11 @@
         0,
         0,
         0,
-        [
-          0,
-          27
-        ],
+        "0_27",
         0,
         0,
         0,
-        [
-          0,
-          24
-        ],
+        "0_25",
         0,
         0,
         0,
@@ -265,29 +141,13 @@
         0,
         0,
         0,
-        [
-          12
-        ],
-        [
-          0,
-          0,
-          24
-        ],
-        [
-          34
-        ],
+        "12",
+        "0_0_24",
+        "35",
         0,
-        [
-          17
-        ],
-        [
-          0,
-          0,
-          104
-        ],
-        [
-          33
-        ],
+        "11",
+        "0_0_104",
+        "33",
         0,
         0,
         0
@@ -297,17 +157,11 @@
         0,
         0,
         0,
-        [
-          0,
-          33
-        ],
+        "0_33",
         0,
         0,
         0,
-        [
-          0,
-          1
-        ],
+        "0_1",
         0,
         0,
         0,
@@ -315,35 +169,17 @@
       ],
       [
         0,
-        [
-          8
-        ],
-        [
-          0,
-          12
-        ],
-        [
-          36
-        ],
+        "8",
+        "0_12",
+        "36",
         0,
-        [
-          28
-        ],
+        "28",
         0,
-        [
-          9
-        ],
+        "24",
         0,
-        [
-          8
-        ],
-        [
-          0,
-          4
-        ],
-        [
-          27
-        ],
+        "8",
+        "0_4",
+        "27",
         0
       ],
       [
